@@ -151,6 +151,29 @@ class EndToEndTest extends FunSuite with BeforeAndAfter with Eventually {
         }
       })
     }
+
+    test(name + ": request uri too long") {
+      val service = new HttpService {
+        def apply(request: HttpRequest) = Future.value(Response())
+      }
+      val client = connect(service)
+      val request = Request("/" + "a" * 4096)
+      val response = Await.result(client(request))
+      assert(response.getStatus === HttpResponseStatus.REQUEST_URI_TOO_LONG)
+      client.close()
+    }
+
+    test(name + ": request header fields too large") {
+      val service = new HttpService {
+        def apply(request: HttpRequest) = Future.value(Response()) 
+      }
+      val client = connect(service)
+      val request = Request()
+      request.headers().add("header", "a" * 8192)
+      val response = Await.result(client(request))
+      assert(response.getStatus === HttpResponseStatus.REQUEST_HEADER_FIELDS_TOO_LARGE)
+      client.close()
+    }
   }
 
   def rich(name: String)(connect: RichHttpService => RichHttpService) {
@@ -184,7 +207,6 @@ class EndToEndTest extends FunSuite with BeforeAndAfter with Eventually {
       assert(buf === Buf.Utf8("hello"))
       assert(res.contentString === "hello")
     }
-
 
     test(name + ": stream") {
       val writer = Reader.writable()
@@ -286,6 +308,25 @@ class EndToEndTest extends FunSuite with BeforeAndAfter with Eventually {
       val client = connect(svc)
       Await.result(client(Request()))
       Await.result(client(Request()))
+      client.close()
+    }
+
+    test(name + ": request uri too long") {
+      val svc = Service.mk[Request, Response] { _ => Future.value(Response()) }
+      val client = connect(svc)
+      val request = Request("/" + "a" * 4096)
+      val response = Await.result(client(request))
+      assert(response.getStatus === HttpResponseStatus.REQUEST_URI_TOO_LONG)
+      client.close()
+    }
+
+    test(name + ": request header fields too large") {
+      val svc = Service.mk[Request, Response] { _ => Future.value(Response()) }
+      val client = connect(svc)
+      val request = Request()
+      request.headers.add("header", "a" * 8192)
+      val response = Await.result(client(request))
+      assert(response.getStatus === HttpResponseStatus.REQUEST_HEADER_FIELDS_TOO_LARGE)
       client.close()
     }
   }
